@@ -7,9 +7,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -19,15 +19,19 @@
 #
 
 import sys
-from qpid.messaging import *
+
+try:
+  from qpid_messaging import *
+except:
+  from qpid.messaging import *
 
 if len(sys.argv)<2:
-  broker =  "localhost:5672" 
+  broker =  "localhost:5672"
 else:
   broker = sys.argv[1]
 
-if len(sys.argv)<3: 
-  address = "amq.topic" 
+if len(sys.argv)<3:
+  address = "amq.topic"
 else:
   address = sys.argv[2]
 
